# sucre

./: .markdownlint.yaml  Cargo.toml  README.md
.github/: funding.yaml
benches/: runtime.rs
cli/: Cargo.toml
cli/src/: main.rs
crates/sucre_cli/: Cargo.toml
crates/sucre_core/: Cargo.toml
crates/sucre_core/src/: chunks.rs  edges.rs  lib.rs  nodes.rs  utils.rs
crates/sucre_explorer/: Cargo.toml
crates/sucre_explorer/src/: graph.rs  main.rs
explorer/: Cargo.toml
explorer/src/: heap.rs  main.rs  utils.rs
src/: allocator.rs  heap.rs  lib.rs  memory.rs  runtime.rs  utils.rs
