[package]
name = "sucre"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "cli", "explorer"]

[features]
default = ["num_cpus"]

[dependencies]
bitfield = "0.14.0"
roaring = { version = "0.10.1", features = ["simd"] }
num_cpus = { version = "1.15.0", optional = true }
memmap2 = "0.5.10"
threadpool = "1.8.1"
crossbeam-utils = "0.8.15"
parking_lot = "0.12.1"
atomic_refcell = "0.1.9"
triomphe = "0.1.8"
