[package]
name = "sucre"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "crates/*"]

[profile.dev]
opt-level = 3

[dependencies]
sucre_core = { path = "./crates/sucre_core" }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "runtime"
harness = false
