[package]
name = "sucre_core"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
roaring = { version = "0.10.1", features = ["simd"] }
num_cpus = { version = "1.15.0", optional = true }
memmap2 = "0.5.10"
crossbeam-channel = "0.5.8"
crossbeam-utils = "0.8.15"
cached = { version = "0.43.0", default-features = false, features = ["proc_macro"] }
threadpool = "1.8.1"
event-listener = "2.5.3"
bitfield = "0.14.0"
cache-size = "0.6.0"
async-mutex = "1.4.0"
