[package]
name = "sucre_core"
version = "0.1.0"
edition = "2021"

[features]
default = ["thread_per_core"]
thread_per_core = ["num_cpus"]

[dependencies]
memmap2 = "0.5.10"
crossbeam-channel = "0.5.8"
async-mutex = "1.4.0"
rayon = "1.7.0"
bit_field = "0.10.2"

num_cpus = { version = "1.15.0", optional = true }
